--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul style="display: flex; justify-content: center; gap: 25px;">
+            <li>Home</li>
+            <li>Contact</li>
+            <li>Info</li>
+        </ul>
+    </nav>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aut quam nihil magni tempore quod, tenetur cum quae cumque placeat hic dolore laudantium mollitia explicabo, eligendi sequi eius molestias nulla dignissimos! Illum, natus sint!
     </div>
