--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color:rgb(21, 59, 120);
+            font-family: 'Courier New', Courier, monospace;
+        }
+        nav{
+            background-color: black;
+            border-radius: 10px;
+        }
+        *{
+            color: white;
+        }
+
+        ul > li{
+            font-size: 20px;
+            font-weight: 500;
+            padding: 10px;
+        }
+        ul{
+            list-style: none;
+        }
+    </style>
 </head>
 <body>
     <nav>
