--- a/feature.html
+++ b/feature.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    in new_1_local stash in new_2
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     in new_2
 </body>
 </html>
